Bug 104714 - Patches to deal with devices where the LCD panel is mounted the wrong-way-up in the case
Summary: Patches to deal with devices where the LCD panel is mounted the wrong-way-up ...
Status: RESOLVED FIXED
Alias: None
Product: plymouth
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Ray Strode [halfline]
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-21 13:25 UTC by Hans de Goede
Modified: 2018-04-10 15:38 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
[PATCH 1/4] pixel-buffer: Add the concept of device rotation (10.70 KB, patch)
2018-01-21 13:25 UTC, Hans de Goede
Details | Splinter Review
[PATCH 2/4] drm: Check for "panel orientation" connector property (3.98 KB, patch)
2018-01-21 13:26 UTC, Hans de Goede
Details | Splinter Review
[PATCH 3/4] drm: Reset primary plane rotation to DRM_MODE_ROTATE_0 (5.27 KB, patch)
2018-01-21 13:27 UTC, Hans de Goede
Details | Splinter Review
[PATCH 4/4] main: Do not update the display on backspace when there is no input to remove (1.77 KB, patch)
2018-01-21 13:27 UTC, Hans de Goede
Details | Splinter Review
Alternative patch for [PATCH 4/4] main: Do not update the display on backspace when there is no input to remove (9.56 KB, patch)
2018-01-21 13:30 UTC, Hans de Goede
Details | Splinter Review

Description Hans de Goede 2018-01-21 13:25:54 UTC
Created attachment 136872 [details] [review]
[PATCH 1/4] pixel-buffer: Add the concept of device rotation

On some devices the LCD panel is mounted in the casing in such a way that
the up/top side of the panel does not match with the top side of the
device.

Examples of this are:
-Tablets where the LCD panel is mounted upside-down (various models)
-Clamshell design devices use portrait tablet screens in a landscape fashion /
 a landscape case, e.g. the GPD pocket, GPD win, Asus T100HA and the VIOS LTH17
 (so the didplay is mounted rotated 90 degrees clock-wise or counter-clock-wise).

Starting with kernel 4.16 there is code in the kernel to:
-Detect affected devices
-Automatically rotate the fbconsole to compensate
-Let userspace know about this with a new "panel orientation" property on the drm connector of the panel

The patch series I'm attaching to this bug adds support for this to plymouth, so that the boot-splash and diskcrypt-ask-password are shown with the correct orientation / the right way up on these devices.

I'm also attach an alternative more involved fix for the issue the last patch solves. But I think the simpler fix is better.
Comment 1 Hans de Goede 2018-01-21 13:26:52 UTC
Created attachment 136873 [details] [review]
[PATCH 2/4] drm: Check for "panel orientation" connector property
Comment 2 Hans de Goede 2018-01-21 13:27:09 UTC
Created attachment 136874 [details] [review]
[PATCH 3/4] drm: Reset primary plane rotation to DRM_MODE_ROTATE_0
Comment 3 Hans de Goede 2018-01-21 13:27:35 UTC
Created attachment 136875 [details] [review]
[PATCH 4/4] main: Do not update the display on backspace when there is no input to remove
Comment 4 Hans de Goede 2018-01-21 13:30:25 UTC
Created attachment 136876 [details] [review]
Alternative patch for [PATCH 4/4] main: Do not update the display on backspace when there is no input to remove
Comment 5 Ray Strode [halfline] 2018-04-10 15:38:22 UTC
Hey sorry, I don't think I'm going to get the time to do a full, in-depth review of this, but
you've been patiently waiting, and they superficially look okay, so i'm going to just push them now.

Thanks for the work on this !


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.